@@ -10,7 +10,6 @@ or change to sqlalchemy?
 8 - Improve wsgi/init.py files to output different type of files, with the correct content-type header
 10 - IE and not-common browsers detection if content-type is application/xhtml+xml, replacing it with text/html if necessary
 13 - Add better doc strings for modules
-14 -  Add optional regexing way for parsing url requests (like django)
 15 - Support for rewriting urls by database queries (useful for forums and blogs)
 and many other features (use a base class to avoid accessing to private attributes?)
 
