@@ -4,7 +4,7 @@ def app(environ,print_rep):
 	try:
 		data = Data(conf,environ,True)
 		output = sys.stdout
-		rep_status,headers,body = dispatch((conf.query("base_dir")+data.SERVER['PATH_INFO']).replace("//","/"))
+		rep_status,headers,body, filename = dispatch((conf.query("base_dir")+data.SERVER['PATH_INFO']).replace("//","/"))
 		print_rep(rep_status,headers.get())
 		return [body]
 	except BaseException as e: #TODO: fix here to use other pages too
